<resources>
    <string name="app_name">CraigsApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="location">tap to select area</string>
    <string name="search_type"><b>For Sale</b></string>
    <string name="hint">Search&#8230;</string>
    <string name="search_description">search</string>
    <string name="auburn">http://auburn.craigslist.org</string>
    <string name="bham">http://bham.craigslist.org</string>
    <string name="dothan">http://dothan.craigslist.org</string>
    <string name="shoals">http://shoals.craigslist.org</string>
    <string name="gadsden">http://gadsden.craigslist.org</string>
    <string name="huntsville">http://huntsville.craigslist.org</string>
    <string name="mobile">http://mobile.craigslist.org</string>
    <string name="montgomery">http://montgomery.craigslist.org</string>
    <string name="tuscaloosa">http://tuscaloosa.craigslist.org</string>
    <string name="anchorage">http://anchorage.craigslist.org</string>
    <string name="fairbanks">http://fairbanks.craigslist.org</string>
    <string name="kenai">http://kenai.craigslist.org</string>
    <string name="juneau">http://juneau.craigslist.org</string>
    <string name="flagstaff">http://flagstaff.craigslist.org</string>
    <string name="mohave">http://mohave.craigslist.org</string>
    <string name="phoenix">http://phoenix.craigslist.org</string>
    <string name="prescott">http://prescott.craigslist.org</string>
    <string name="showlow">http://showlow.craigslist.org</string>
    <string name="sierravista">http://sierravista.craigslist.org</string>
    <string name="tucson">http://tucson.craigslist.org</string>
    <string name="yuma">http://yuma.craigslist.org</string>
    <string name="fayar">http://fayar.craigslist.org</string>
    <string name="fortsmith">http://fortsmith.craigslist.org</string>
    <string name="jonesboro">http://jonesboro.craigslist.org</string>
    <string name="littlerock">http://littlerock.craigslist.org</string>
    <string name="texarkana">http://texarkana.craigslist.org</string>
    <string name="bakersfield">http://bakersfield.craigslist.org</string>
    <string name="chico">http://chico.craigslist.org</string>
    <string name="fresno">http://fresno.craigslist.org</string>
    <string name="goldcountry">http://goldcountry.craigslist.org</string>
    <string name="hanford">http://hanford.craigslist.org</string>
    <string name="humboldt">http://humboldt.craigslist.org</string>
    <string name="imperial">http://imperial.craigslist.org</string>
    <string name="inlandempire">http://inlandempire.craigslist.org</string>
    <string name="losangeles">http://losangeles.craigslist.org</string>
    <string name="mendocino">http://mendocino.craigslist.org</string>
    <string name="merced">http://merced.craigslist.org</string>
    <string name="modesto">http://modesto.craigslist.org</string>
    <string name="monterey">http://monterey.craigslist.org</string>
    <string name="orangecounty">http://orangecounty.craigslist.org</string>
    <string name="palmsprings">http://palmsprings.craigslist.org</string>
    <string name="redding">http://redding.craigslist.org</string>
    <string name="sacramento">http://sacramento.craigslist.org</string>
    <string name="sandiego">http://sandiego.craigslist.org</string>
    <string name="sfbay">http://sfbay.craigslist.org</string>
    <string name="slo">http://slo.craigslist.org</string>
    <string name="santabarbara">http://santabarbara.craigslist.org</string>
    <string name="santamaria">http://santamaria.craigslist.org</string>
    <string name="siskiyou">http://siskiyou.craigslist.org</string>
    <string name="stockton">http://stockton.craigslist.org</string>
    <string name="susanville">http://susanville.craigslist.org</string>
    <string name="ventura">http://ventura.craigslist.org</string>
    <string name="visalia">http://visalia.craigslist.org</string>
    <string name="yubasutter">http://yubasutter.craigslist.org</string>
    <string name="boulder">http://boulder.craigslist.org</string>
    <string name="cosprings">http://cosprings.craigslist.org</string>
    <string name="denver">http://denver.craigslist.org</string>
    <string name="eastco">http://eastco.craigslist.org</string>
    <string name="fortcollins">http://fortcollins.craigslist.org</string>
    <string name="rockies">http://rockies.craigslist.org</string>
    <string name="pueblo">http://pueblo.craigslist.org</string>
    <string name="westslope">http://westslope.craigslist.org</string>
    <string name="newlondon">http://newlondon.craigslist.org</string>
    <string name="hartford">http://hartford.craigslist.org</string>
    <string name="newhaven">http://newhaven.craigslist.org</string>
    <string name="nwct">http://nwct.craigslist.org</string>
    <string name="delaware">http://delaware.craigslist.org</string>
    <string name="washingtondc">http://washingtondc.craigslist.org</string>
    <string name="daytona">http://daytona.craigslist.org</string>
    <string name="keys">http://keys.craigslist.org</string>
    <string name="fortlauderdale">http://fortlauderdale.craigslist.org</string>
    <string name="fortmyers">http://fortmyers.craigslist.org</string>
    <string name="gainesville">http://gainesville.craigslist.org</string>
    <string name="cfl">http://cfl.craigslist.org</string>
    <string name="jacksonville">http://jacksonville.craigslist.org</string>
    <string name="lakeland">http://lakeland.craigslist.org</string>
    <string name="lakecity">http://lakecity.craigslist.org</string>
    <string name="ocala">http://ocala.craigslist.org</string>
    <string name="okaloosa">http://okaloosa.craigslist.org</string>
    <string name="orlando">http://orlando.craigslist.org</string>
    <string name="panamacity">http://panamacity.craigslist.org</string>
    <string name="pensacola">http://pensacola.craigslist.org</string>
    <string name="sarasota">http://sarasota.craigslist.org</string>
    <string name="miami">http://miami.craigslist.org</string>
    <string name="spacecoast">http://spacecoast.craigslist.org</string>
    <string name="staugustine">http://staugustine.craigslist.org</string>
    <string name="tallahassee">http://tallahassee.craigslist.org</string>
    <string name="tampa">http://tampa.craigslist.org</string>
    <string name="treasure">http://treasure.craigslist.org</string>
    <string name="westpalmbeach">http://westpalmbeach.craigslist.org</string>
    <string name="albanyga">http://albanyga.craigslist.org</string>
    <string name="athensga">http://athensga.craigslist.org</string>
    <string name="atlanta">http://atlanta.craigslist.org</string>
    <string name="augusta">http://augusta.craigslist.org</string>
    <string name="brunswick">http://brunswick.craigslist.org</string>
    <string name="columbusga">http://columbusga.craigslist.org</string>
    <string name="macon">http://macon.craigslist.org</string>
    <string name="nwga">http://nwga.craigslist.org</string>
    <string name="savannah">http://savannah.craigslist.org</string>
    <string name="statesboro">http://statesboro.craigslist.org</string>
    <string name="valdosta">http://valdosta.craigslist.org</string>
    <string name="honolulu">http://honolulu.craigslist.org</string>
    <string name="boise">http://boise.craigslist.org</string>
    <string name="eastidaho">http://eastidaho.craigslist.org</string>
    <string name="lewiston">http://lewiston.craigslist.org</string>
    <string name="twinfalls">http://twinfalls.craigslist.org</string>
    <string name="bn">http://bn.craigslist.org</string>
    <string name="chambana">http://chambana.craigslist.org</string>
    <string name="chicago">http://chicago.craigslist.org</string>
    <string name="decatur">http://decatur.craigslist.org</string>
    <string name="lasalle">http://lasalle.craigslist.org</string>
    <string name="mattoon">http://mattoon.craigslist.org</string>
    <string name="peoria">http://peoria.craigslist.org</string>
    <string name="rockford">http://rockford.craigslist.org</string>
    <string name="carbondale">http://carbondale.craigslist.org</string>
    <string name="springfieldil">http://springfieldil.craigslist.org</string>
    <string name="quincy">http://quincy.craigslist.org</string>
    <string name="bloomington">http://bloomington.craigslist.org</string>
    <string name="evansville">http://evansville.craigslist.org</string>
    <string name="fortwayne">http://fortwayne.craigslist.org</string>
    <string name="indianapolis">http://indianapolis.craigslist.org</string>
    <string name="kokomo">http://kokomo.craigslist.org</string>
    <string name="tippecanoe">http://tippecanoe.craigslist.org</string>
    <string name="muncie">http://muncie.craigslist.org</string>
    <string name="richmondin">http://richmondin.craigslist.org</string>
    <string name="southbend">http://southbend.craigslist.org</string>
    <string name="terrehaute">http://terrehaute.craigslist.org</string>
    <string name="ames">http://ames.craigslist.org</string>
    <string name="cedarrapids">http://cedarrapids.craigslist.org</string>
    <string name="desmoines">http://desmoines.craigslist.org</string>
    <string name="dubuque">http://dubuque.craigslist.org</string>
    <string name="fortdodge">http://fortdodge.craigslist.org</string>
    <string name="iowacity">http://iowacity.craigslist.org</string>
    <string name="masoncity">http://masoncity.craigslist.org</string>
    <string name="quadcities">http://quadcities.craigslist.org</string>
    <string name="siouxcity">http://siouxcity.craigslist.org</string>
    <string name="ottumwa">http://ottumwa.craigslist.org</string>
    <string name="waterloo">http://waterloo.craigslist.org</string>
    <string name="lawrence">http://lawrence.craigslist.org</string>
    <string name="ksu">http://ksu.craigslist.org</string>
    <string name="nwks">http://nwks.craigslist.org</string>
    <string name="salina">http://salina.craigslist.org</string>
    <string name="seks">http://seks.craigslist.org</string>
    <string name="swks">http://swks.craigslist.org</string>
    <string name="topeka">http://topeka.craigslist.org</string>
    <string name="wichita">http://wichita.craigslist.org</string>
    <string name="bgky">http://bgky.craigslist.org</string>
    <string name="eastky">http://eastky.craigslist.org</string>
    <string name="lexington">http://lexington.craigslist.org</string>
    <string name="louisville">http://louisville.craigslist.org</string>
    <string name="owensboro">http://owensboro.craigslist.org</string>
    <string name="westky">http://westky.craigslist.org</string>
    <string name="batonrouge">http://batonrouge.craigslist.org</string>
    <string name="cenla">http://cenla.craigslist.org</string>
    <string name="houma">http://houma.craigslist.org</string>
    <string name="lafayette">http://lafayette.craigslist.org</string>
    <string name="lakecharles">http://lakecharles.craigslist.org</string>
    <string name="monroe">http://monroe.craigslist.org</string>
    <string name="neworleans">http://neworleans.craigslist.org</string>
    <string name="shreveport">http://shreveport.craigslist.org</string>
    <string name="maine">http://maine.craigslist.org</string>
    <string name="annapolis">http://annapolis.craigslist.org</string>
    <string name="baltimore">http://baltimore.craigslist.org</string>
    <string name="easternshore">http://easternshore.craigslist.org</string>
    <string name="frederick">http://frederick.craigslist.org</string>
    <string name="smd">http://smd.craigslist.org</string>
    <string name="westmd">http://westmd.craigslist.org</string>
    <string name="boston">http://boston.craigslist.org</string>
    <string name="capecod">http://capecod.craigslist.org</string>
    <string name="southcoast">http://southcoast.craigslist.org</string>
    <string name="all_nyc">NYC</string>
    <string name="btn_search">Search</string>
</resources>