<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categories_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/textfield_search_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.30"
            android:contentDescription="@string/search_description"
            android:scaleType="fitStart"
            android:src="@drawable/search" />

    </LinearLayout>

    <Button
        android:id="@+id/categories_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="41dp"
        android:text="@string/search_type" />

    <CheckBox
        android:id="@+id/cbBrooklyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categories_btn"
        android:layout_below="@+id/categories_btn"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="17dp"
        android:text="brk" />

    <CheckBox
        android:id="@+id/cbBronx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbBrooklyn"
        android:layout_below="@+id/cbBrooklyn"
        android:text="brnx" />

    <CheckBox
        android:id="@+id/cbManh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbBronx"
        android:layout_below="@+id/cbBronx"
        android:text="mnh" />

    <CheckBox
        android:id="@+id/cbQueens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbManh"
        android:layout_below="@+id/cbManh"
        android:text="que" />

    <CheckBox
        android:id="@+id/cbStaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbQueens"
        android:layout_below="@+id/cbQueens"
        android:text="sti" />

    <CheckBox
        android:id="@+id/cbAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbStaten"
        android:layout_below="@+id/cbStaten"
        android:text="@string/all_nyc" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbAll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/btn_search" 
        android:textAlignment="center"/>

    <Button
        android:id="@+id/pick_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cbManh"
        android:layout_alignBottom="@+id/cbManh"
        android:layout_alignLeft="@+id/search_btn"
        android:text="Button" />

</RelativeLayout>